--- a/task11/task4/index.html
+++ b/task11/task4/index.html
@@ -10,29 +10,29 @@
 <body>
 	<aside class="sidebar-container">
 		<section class="sidebar-container_add">
-			<div class="sidebar-container_add_button"><i class="fas fa-plus"></i>&nbsp; ADD A BOOK</div>
+			<div class="sidebar-container_add_button"><i class="fas fa-plus"></i>&nbsp; add a book</div>
 		</section>
 		<nav class="sidebar-container_nav list-group">
-			<a class="list-group-item" href="#"><i class="fa fa-book fa-fw"></i>&nbsp; Now Reading</a>
-			<a class="list-group-item" href="#"><i class="fa fa-globe-americas fa-fw"></i>&nbsp; Browse</a>
-			<a class="list-group-item" href="#"><i class="fa fa-shopping-cart fa-fw"></i>&nbsp; Buy Books</a>
-			<a class="list-group-item" href="#"><i class="far fa-star fa-fw"></i>&nbsp; Favourite Books</a>
-			<a class="list-group-item" href="#"><i class="fa fa-th-list fa-fw"></i>&nbsp; Wishlist</a>
-			<a class="list-group-item" href="#"><i class="far fa-clock fa-fw"></i>&nbsp; History</a>
+			<a class="list-group-item" href="#"><i class="fa fa-book fa-fw"></i>&nbsp; now reading</a>
+			<a class="list-group-item" href="#"><i class="fa fa-globe-americas fa-fw"></i>&nbsp; browse</a>
+			<a class="list-group-item" href="#"><i class="fa fa-shopping-cart fa-fw"></i>&nbsp; buy books</a>
+			<a class="list-group-item" href="#"><i class="far fa-star fa-fw"></i>&nbsp; favourite books</a>
+			<a class="list-group-item" href="#"><i class="fa fa-th-list fa-fw"></i>&nbsp; wishlist</a>
+			<a class="list-group-item" href="#"><i class="far fa-clock fa-fw"></i>&nbsp; history</a>
 		</nav>
 		<section class="sidebar-container_my-folders">
-			<a href="#"><b>&bull;</b> Must Read Titles</a>
-			<a href="#"><b>&bull;</b> Best Of List</a>
-			<a href="#"><b>&bull;</b> Classic Novels</a>
-			<a href="#"><b>&bull;</b> Non Fiction</a>
+			<a href="#"><b>&bull;</b> must read titles</a>
+			<a href="#"><b>&bull;</b> best of list</a>
+			<a href="#"><b>&bull;</b> classic novels</a>
+			<a href="#"><b>&bull;</b> non fiction</a>
 		</section>
 		<section class="sidebar-container_recent-actions">
 				<div class="list-group">
-					<i class="fa fa-clock fa-fw"></i>You added <b>Fight Club</b> by <b>Chuck Palahniuk</b> to your <b>Must Read Titles</b>.
+					<i class="fa fa-clock fa-fw"></i><p>you added <b>fight club</b> by <b>chuck palahniuk</b> to your <b>must read titles</b>.</p>
 					<p>24 minutes ago</p>
 				</div>
 				<div class="list-group">
-					<i class="fa fa-clock fa-fw"></i>You added <b>The Trial</b> by <b>Franz Kafka</b> to your <b>Must Read Titles</b>.
+					<i class="fa fa-clock fa-fw"></i><p>you added <b>the trial</b> by <b>franz kafka</b> to your <b>must read titles</b>.</p>
 					<p>48 minutes ago</p>
 				</div>
 		</section>
