--- a/task12/task3/index.html
+++ b/task12/task3/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <ul id="raiting">
-    <li id="star_1" class="raiting_red">&#9733;</li>
+  <ul id="rating">
+    <li id="star_1" class="rating_red">&#9733;</li>
     <li id="star_2">&#9733;</li>
     <li id="star_3">&#9733;</li>
     <li id="star_4">&#9733;</li>
