--- a/task11/task1.html
+++ b/task11/task1.html
@@ -10,6 +10,8 @@
 			border-radius: 50%;
 			mask-image: url(https://image.flaticon.com/icons/png/512/73/73588.png);
 			mask-size: 300px;
+			-webkit-mask-image: url(https://image.flaticon.com/icons/png/512/73/73588.png);
+			-webkit-mask-size: 300px;
 		}
 	</style>
 </head>
